--- a/update_github_stats.ipynb
+++ b/update_github_stats.ipynb
@@ -2,30 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[WinError 3] The system cannot find the path specified: '~./home/crawford/python-portfolio/'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-ddc4ef3b2106>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"~./home/crawford/python-portfolio/\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] The system cannot find the path specified: '~./home/crawford/python-portfolio/'"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "\n",
-    "os.chdir(\"/home/crawford/python-portfolio/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,10 +36,10 @@
     }
    ],
    "source": [
-    "for i in range(10):\n",
-    "    update_github_events(db,i)\n",
-    "    print(\"success\")\n",
-    "    time.sleep(61)"
+    "def update_github_events():\n",
+    "    for i in range(10):\n",
+    "        update_github_events(db,i)\n",
+    "        time.sleep(61)"
    ]
   },
   {
@@ -71,10 +48,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10):\n",
-    "    update_repos(db,i)\n",
-    "    print(\"success\")\n",
-    "    time.sleep(61)\n"
+    "def update_repos():\n",
+    "    for i in range(10):\n",
+    "        update_repos(db,i)\n",
+    "        time.sleep(61)\n"
    ]
   },
   {
@@ -121,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
